fixing descriptions, removing images, updating README

--- a/01_getting_started_geospatial.ipynb
+++ b/01_getting_started_geospatial.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Lab 1: Getting started with geospatial data analysis\n",
     "\n",
-    "This notebook is part of the blog post [Getting Started with Geospatial Analysis on SageMaker Studio Lab](https://towardsdatascience.com/getting-started-with-geospatial-analysis-b2116c50308b) and covers the basics of getting started with Geospatial Data Analysis on SageMaker Studio Labs. We start with exploring publicly available geographic datasets and then explore the sentinel geospatial dataset available at AWS open data registry. We explore California Lakes and Counties using geographic vector data and then focus Lake Shasta in California for analyzing Sentinel-2 geospatial data and calculating spectral indices. \n",
+    "This notebook covers the basics of getting started with Geospatial Data Analysis on SageMaker AI. You start with exploring publicly available geographic datasets and then explore the sentinel geospatial dataset available at AWS open data registry. You explore California Lakes and Counties using geographic vector data and then focus Lake Shasta in California for analyzing Sentinel-2 geospatial data and calculating spectral indices. \n",
     "\n",
     "<div class=\"alert alert-info\">\n",
     "This notebook is based on the GitHub repo <code>https://github.com/samx18/geospatial_analysis</code> and is updated for SageMaker AI Studio\n",
@@ -27,10 +27,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "034e8886-dd18-42df-be76-fc11c6e125f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== CPU Information ===\n",
+      "Physical cores: 8\n",
+      "Total cores: 16\n",
+      "CPU Frequency: 3104.51MHz\n",
+      "CPU Usage Per Core:\n",
+      "Core 0: 0.0%\n",
+      "Core 1: 0.0%\n",
+      "Core 2: 1.0%\n",
+      "Core 3: 0.0%\n",
+      "Core 4: 1.0%\n",
+      "Core 5: 0.0%\n",
+      "Core 6: 0.0%\n",
+      "Core 7: 0.0%\n",
+      "Core 8: 1.0%\n",
+      "Core 9: 0.0%\n",
+      "Core 10: 4.0%\n",
+      "Core 11: 1.0%\n",
+      "Core 12: 0.0%\n",
+      "Core 13: 0.0%\n",
+      "Core 14: 0.0%\n",
+      "Core 15: 0.0%\n",
+      "\n",
+      "=== Memory Information ===\n",
+      "Total: 62.01 GB\n",
+      "Available: 17.48 GB\n",
+      "Used: 43.84 GB\n",
+      "Percentage: 71.8%\n",
+      "\n",
+      "=== GPU Information ===\n",
+      "/bin/bash: line 1: nvidia-smi: command not found\n"
+     ]
+    }
+   ],
    "source": [
     "import psutil\n",
     "import platform\n",
@@ -99,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "ab9ce544",
    "metadata": {},
    "outputs": [],
