--- a/02_sentinel2_stac.ipynb
+++ b/02_sentinel2_stac.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Extract Sentinel-2 COG data into xarray using [`stackstac`](https://github.com/gjoseph92/stackstac/tree/main) and visualize.\n",
     "\n",
-    "This code is taken from [STAC + stackstac + xarray](https://hrodmn.dev/posts/stackstac/) and adapted for a SageMaker AI Studio notebook."
+    "This code is based on [STAC + stackstac + xarray](https://hrodmn.dev/posts/stackstac/) content and is adapted for a SageMaker AI Studio notebook."
    ]
   },
   {
