--- a/03_geospatial_imagery_analysis.ipynb
+++ b/03_geospatial_imagery_analysis.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Lab 3: Vegetation analysis using SentinelHub and Sentinel-2 imagery\n",
     "\n",
-    "This notebook includes examples included in the blog post [Getting Started with Geospatial Analysis on SageMaker Studio Lab](https://towardsdatascience.com/getting-started-with-geospatial-analysis-b2116c50308b). For this specific use case we focus on working with the [Sentinel-2](https://registry.opendata.aws/sentinel-2/) dataset using the [SentinelHub API]((https://www.sentinel-hub.com/) to query and download pre/post scenes over Mt. Shasta in California during the [Lava Fire](https://en.wikipedia.org/wiki/Lava_Fire_(2021)) from June 2021. We then compare two images calculating an normalized difference vegetation index (NDVI) to identify vegetation and classify the result using a simple land cover classification scheme. \n",
+    "This notebook includes examples of working with the [Sentinel-2](https://registry.opendata.aws/sentinel-2/) dataset using the [SentinelHub API]((https://www.sentinel-hub.com/) to query and download pre/post scenes over Mt. Shasta in California during the [Lava Fire](https://en.wikipedia.org/wiki/Lava_Fire_(2021)) from June 2021. You compare two images calculating an normalized difference vegetation index (NDVI) to identify vegetation and classify the result using a simple land cover classification scheme. \n",
     "\n",
     "<div class=\"alert alert-info\">\n",
     "This notebook is based on the GitHub repo <code>https://github.com/aws-samples/aws-sentinel2-smsl-notebook</code> and is updated for SageMaker AI Studio\n",
