SageMaker processing job notebook finished, overall minor flow and text changes

--- a/06_smd_custom_geospatial.ipynb
+++ b/06_smd_custom_geospatial.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Lab 6: Interactive geospatial analysis in a SageMaker AI Studio JupyterLab notebook using a custom SageMaker Distribution Image\n",
     "\n",
-    "This notebook is based on this [notebook](https://github.com/aws-samples/sagemaker-custom-image-for-geospatial-analytics/blob/main/notebooks/01-interactive-geospatial-analyses-custom-image.ipynb) but was adapted and extended for a specialized workshop."
+    "This notebook is based on this [notebook](https://github.com/aws-samples/sagemaker-custom-image-for-geospatial-analytics/blob/main/notebooks/01-interactive-geospatial-analyses-custom-image.ipynb) and was adapted and extended for a specialized workshop."
    ]
   },
   {
@@ -15,7 +15,7 @@
    "id": "f9259220-fdab-4da0-a312-11cc4026a331",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\"><b>Prerequsites:</b> You need to build and attach a custom SageMaker image by executing the <code>custom-sm-image/build_sm_custom_image.ipynb</code> notebook. <br/>After you executed the image build notebook and attach the custom image to the domain, open Lab 6 notebook in <b>a new JupyterLab app</b> and make sure to select the custom image you built and attached.\n",
+    "<div class=\"alert alert-info\"><b>Prerequsites:</b> You need to build and attach a custom SageMaker image by executing the <code>custom-sm-image/build_sm_custom_image.ipynb</code> notebook. <br/>After you executed the image build notebook and attach the custom image to the domain, open this Lab 6 notebook in <b>a new JupyterLab app</b> and make sure to select the custom image you built and attached.\n",
     "</div>"
    ]
   },
