--- a/custom-sm-image/build_sm_custom_image.ipynb
+++ b/custom-sm-image/build_sm_custom_image.ipynb
@@ -563,20 +563,24 @@
    "source": [
     "## Use the custom image\n",
     "\n",
-    "Now you can use the custom image in one of two ways:\n",
-    "1. Use the image to run JupyterLab notebook kernels\n",
-    "2. Use the image to run SageMaker training and processing jobs\n",
+    "You can use the custom image in one of two ways:\n",
     "\n",
-    "For examples change to the [`06_smd_custom_geospatial`](../06_smd_custom_geospatial.ipynb) notebook."
+    "1. Use the image to run JupyterLab notebook kernels.\n",
+    "2. Use the image to run SageMaker processing and training jobs.\n",
+    "\n",
+    "<div class=\"alert alert-block alert-warning\"> Navigate to the new JupyterLab instance to run the lab 6 and 7</div>\n",
+    "\n",
+    "- Lab 6: [`06_smd_custom_geospatial`](../06_smd_custom_geospatial.ipynb) notebook demonstrates hwo to use a custom image as JupyterLab kernel\n",
+    "- Lab 7: Run [`07_cmd_custom_processing_jobs`](../07_cmd_custom_processing_jobs.ipynb) notebook demonstrates how to use a custom image for SageMaker processing jobs"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab753519-a694-49fd-8625-f0228e01cccc",
+   "cell_type": "markdown",
+   "id": "3dd3585b-3893-48d2-8fd2-43afe3b49600",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
