added a SageMaker pipeline for data processing to the notebook 07

--- a/custom-sm-image/build_sm_custom_image.ipynb
+++ b/custom-sm-image/build_sm_custom_image.ipynb
@@ -31,30 +31,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5e9c7e66-0f2e-49fc-b471-a1e9ccf8a366",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/sagemaker-user/.config/sagemaker/config.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
     "import boto3\n",
     "import sagemaker\n",
-    "from packaging import version"
+    "from packaging import version\n",
+    "from IPython.display import HTML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "670a442a-ce92-4d61-ac31-b8407082fc16",
    "metadata": {},
    "outputs": [],
@@ -64,23 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b4e95679-8f93-43a3-be21-d26685dc38ae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SageMaker domain id: d-f3jonv4qj6w1\n",
-      "Space name: geo-space\n",
-      "User profile: studio-user-geo-697c4ae0\n",
-      "Stored 'domain_id' (str)\n",
-      "Stored 'space_name' (str)\n",
-      "Stored 'user_profile_name' (str)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "NOTEBOOK_METADATA_FILE = \"/opt/ml/metadata/resource-metadata.json\"\n",
     "domain_id = None\n",
@@ -110,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "49ddba6a-d7ab-4cf0-8c43-7a2585dde7ed",
    "metadata": {},
    "outputs": [],
@@ -128,18 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "51c8af8f-6d2a-4f31-a502-ca3d20ee9c4f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The docker access is ENABLED in the domain d-f3jonv4qj6w1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# check that docker enabled in the SageMaker domain\n",
     "docker_settings = sm_client.describe_domain(DomainId=domain_id)['DomainSettings'].get('DockerSettings')\n",
@@ -166,18 +137,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "39160cd6-14af-41e9-ae68-a2ff55b8cbb4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Domain id: d-f3jonv4qj6w1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Domain id: {domain_id}\")"
    ]
@@ -283,30 +246,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "bb9a831e-585b-4fbd-9a48-1f9c219d359a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "SageMaker image: \u001b[1marn:aws:sagemaker:us-east-1:885854791233:image/sagemaker-distribution-cpu\u001b[0m\n",
-      "SageMaker image type: \u001b[1mcpu\u001b[0m\n",
-      "SageMaker image version: \u001b[1m1.11\u001b[0m\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Retrieve the SageMaker image for the current space, extract the type (cpu/gpu) and the version\n",
-    "r = sm_client.describe_space(DomainId=domain_id, SpaceName=space_name)\n",
-    "resource_spec = r['SpaceSettings']['JupyterLabAppSettings']['DefaultResourceSpec']\n",
-    "sm_image = resource_spec['SageMakerImageArn']\n",
-    "sm_dist_type = sm_image.split('-')[-1]\n",
-    "sm_image_version = version.parse(resource_spec['SageMakerImageVersionAlias'])\n",
-    "sm_image_version = f'{sm_image_version.major}.{sm_image_version.minor}'\n",
+    "try:\n",
+    "    r = sm_client.describe_space(DomainId=domain_id, SpaceName=space_name)\n",
+    "    resource_spec = r['SpaceSettings']['JupyterLabAppSettings']['DefaultResourceSpec']\n",
+    "    sm_image = resource_spec['SageMakerImageArn']\n",
+    "    sm_dist_type = sm_image.split('-')[-1]\n",
+    "    sm_image_version = version.parse(resource_spec['SageMakerImageVersionAlias'])\n",
+    "    sm_image_version = f'{sm_image_version.major}.{sm_image_version.minor}'\n",
+    "except KeyError as e:\n",
+    "    print(f'Cannot find the key {e} in the DescribeSpace output. Make sure you run this notebook in a built-in SageMaker Distribution Image, not in the custom image')\n",
+    "    raise e\n",
     "\n",
     "print(f\"\"\"\n",
     "SageMaker image: \\033[1m{sm_image}\\033[0m\n",
@@ -317,24 +272,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "7b28b0e2-b4c7-4544-b3f6-b03f17682677",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Custom image ECR URI: 906545278380.dkr.ecr.us-east-1.amazonaws.com/smd-custom-geo:1.11-cpu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "repo_name = \"smd-custom-geo\"\n",
     "image_name = f'{sm_image_version}-{sm_dist_type}'\n",
     "\n",
     "account_id = boto3.client(\"sts\").get_caller_identity()[\"Account\"]\n",
-    "region = metadata[\"ResourceArn\"].split(\":\")[3]\n",
+    "region = sagemaker.Session().boto_region_name\n",
     "ecr_uri = f\"{account_id}.dkr.ecr.{region}.amazonaws.com/{repo_name}:{image_name}\"\n",
     "\n",
     "print(f'Custom image ECR URI: {ecr_uri}')"
@@ -360,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "5bd7302d-0a21-4d5a-9be8-25a16dc91ed7",
    "metadata": {},
    "outputs": [],
@@ -372,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "564efb4a-a6e5-42f9-8f31-0aac8ca842bd",
    "metadata": {},
    "outputs": [],
@@ -423,11 +370,11 @@
     "echo \"ECR TARGET: ${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/${TAG}\"\n",
     "\n",
     "# If the repository doesn't exist in ECR, create it.\n",
-    "RC=0\n",
-    "aws ecr describe-repositories --repository-names $REPO_NAME --registry-id $ACCOUNT_ID --no-paginate >> /dev/null || RC=$?\n",
-    "if [ $RC -ne 0 ]; then\n",
-    "   echo \"ECR repository '$REPO_NAME' doesn't exist, creating repository\"\n",
-    "   aws ecr create-repository --repository-name $REPO_NAME --registry-id $ACCOUNT_ID --no-paginate >> /dev/null\n",
+    "aws ecr describe-repositories --repository-names \"${REPO_NAME}\" > /dev/null 2>&1\n",
+    "\n",
+    "if [ $? -ne 0 ]\n",
+    "then\n",
+    "    aws ecr create-repository --repository-name \"${REPO_NAME}\" > /dev/null\n",
     "fi\n",
     "\n",
     "# Login to ECR\n",
@@ -465,25 +412,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "a266854d-c109-4760-9a04-8916909b314a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "    \"imageIds\": [\n",
-      "        {\n",
-      "            \"imageDigest\": \"sha256:a27e322f1c849542510c0c27b3a7a94b45ee2840b53cbe95529ea3b2c163d7fc\",\n",
-      "            \"imageTag\": \"1.11-cpu\"\n",
-      "        }\n",
-      "    ]\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!aws ecr list-images --repository-name {repo_name}"
    ]
@@ -500,23 +432,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "1629464c-ba7c-4c05-a970-8708fb864a7c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'906545278380.dkr.ecr.us-east-1.amazonaws.com/smd-custom-geo:1.11-cpu'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Output image URI - you need this URI to attach the image to the domain\n",
+    "# Output image URI\n",
     "ecr_uri"
    ]
   },
@@ -539,13 +460,46 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9d26a36-de2c-4d82-90b9-7a6842cea8cd",
+   "id": "25f5d95a-aaa2-4d70-8bf3-4eb132cd778e",
    "metadata": {},
    "source": [
     "## Create a JupyterLab app with the custom image\n",
     "\n",
-    "Follow the instructions:\n",
-    "1. Open Studio\n",
+    "Follow the instructions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "eab63df8-161f-4dcc-9e95-6ac431e11cbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<b>1. Open <a target=\"top\" href=\"https://studio-d-f3jonv4qj6w1.studio.us-east-1.sagemaker.aws/jupyterlab\">JupyterLab Spaces</a> in the Studio UI</b>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Show the Studio JupyterLab Apps link\n",
+    "display(\n",
+    "    HTML('<b>1. Open <a target=\"top\" href=\"https://studio-{}.studio.{}.sagemaker.aws/jupyterlab\">JupyterLab Spaces</a> in the Studio UI</b>'.format(\n",
+    "            domain_id, region))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9d26a36-de2c-4d82-90b9-7a6842cea8cd",
+   "metadata": {},
+   "source": [
     "2. Select **JupyterLab**\n",
     "3. Select **+ Create JupyterLab space** and enter a name for your new space, for example `geo-custom`, select **Create space**\n",
     "4. Select the custom image you attached to SageMaker Studio as **Image**\n",
@@ -563,20 +517,16 @@
    "source": [
     "## Use the custom image\n",
     "\n",
-    "You can use the custom image in one of two ways:\n",
+    "Now you can use the custom image in one of two ways:\n",
+    "1. Use the image to run JupyterLab notebook kernels\n",
+    "2. Use the image to run SageMaker training and processing jobs\n",
     "\n",
-    "1. Use the image to run JupyterLab notebook kernels.\n",
-    "2. Use the image to run SageMaker processing and training jobs.\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\"> Navigate to the new JupyterLab instance to run the lab 6 and 7</div>\n",
-    "\n",
-    "- Lab 6: [`06_smd_custom_geospatial`](../06_smd_custom_geospatial.ipynb) notebook demonstrates hwo to use a custom image as JupyterLab kernel\n",
-    "- Lab 7: Run [`07_cmd_custom_processing_jobs`](../07_cmd_custom_processing_jobs.ipynb) notebook demonstrates how to use a custom image for SageMaker processing jobs"
+    "For these examples **change to the new JupyterLab app with the custom image** and open [`06_smd_custom_geospatial`](../06_smd_custom_geospatial.ipynb) notebook."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3dd3585b-3893-48d2-8fd2-43afe3b49600",
+   "id": "c4328a0b-bc91-4f73-b503-4c5d88f89a1f",
    "metadata": {},
    "source": [
     "---"
